--- a/Exercices-js-Array_Objects/style.css
+++ b/Exercices-js-Array_Objects/style.css
@@ -14,7 +14,20 @@ body{
     justify-content: center;
 }
 
-.texte{
+#tableau2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
+.texteNom{
+    margin: 20px;
+    font-family: "Comic Sans MS";
+    color: navajowhite;
+}
+
+.texteAge{
     margin: 20px;
     font-family: "Comic Sans MS";
     color: navajowhite;
@@ -34,3 +47,4 @@ body{
     color: darkred;
     font-weight: bold;
 }
+
