--- a/Exercices-js-Array_Objects/style2.css
+++ b/Exercices-js-Array_Objects/style2.css
@@ -1,5 +1,6 @@
 body{
     background: darkred;
+    text-align: center;
 }
 
 #tableauImage{
@@ -14,3 +15,22 @@ body{
     color: navajowhite;
 }
 
+#tableauTexte1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#tableauTexte2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.nom{
+    margin: 120px;
+}
+
+.age{
+    margin: 130px;
+}
